demo_timeout_endpoint/Deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: demo-timeout-endpoint
  namespace: test-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-timeout-endpoint
  template:
    metadata:
      labels:
        app: demo-timeout-endpoint
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: demo-timeout-endpoint
          image: evil26r/demo_timeout_endpoint
          ports:
            - containerPort: 8080
              protocol: TCP
