demo_timeout_endpoint/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo-timeout-endpoint
  namespace: test-project
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: demo-timeout-endpoint
