demo_timeout_endpoint/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-timeout-endpoint
  namespace: test-project
spec:
  hosts:
    - demo-timeout-endpoint
  http:
    - match:
        - uri:
            prefix: /abc
        - uri:
            prefix: /test
      name: test1
      route:
        - destination:
            host: demo-timeout-endpoint
      timeout: 1s
    - name: test2
      route:
        - destination:
            host: demo-timeout-endpoint
      timeout: 2s
